@@ -1,3 +1,15 @@
+2009-04-21  Oliver Hunt  <oliver@apple.com>
+
+        Reviewed by Maciej Stachowiak.
+
+        Improve String.replace performance slightly
+
+        Apply our vm reentry caching logic to String.replace with global
+        regexes.
+
+        * runtime/StringPrototype.cpp:
+        (JSC::stringProtoFuncReplace):
+
 2009-04-21  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Cameron Zwarich and Oliver Hunt.
